hw_3_kubernetes_networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
  labels:
    app: nginx-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-deployment
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: homework-deployment
    spec:
      containers:
      - name: nginx-server
        image: nginx
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: shared-data
          mountPath: /homework
        command: ["/bin/bash", "-c"]
        args:
        - |
          cat > /etc/nginx/conf.d/default.conf <<EOF
          server {
            listen 8000;
            server_name localhost;
            location / {
              root /homework;
              index index.html;
            }
          }
          EOF
          nginx -g "daemon off;"
        lifecycle:
          preStop:
            exec:
              command: ["rm", "/homework/index.html"]
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi
      nodeSelector:
        homework: "true"
      volumes:
      - name: shared-data
        emptyDir: {}
